--- a/widgets/time-switch/css/style.css
+++ b/widgets/time-switch/css/style.css
@@ -1,21 +1,10 @@
 /* Style your widget here */
 .time-switch-class {
-	font-style: italic;
+
 }
 
-.action {
-	background: #9a9a9a;
-	border-radius: 3px;
-	padding: 2px 10px 2px 10px;
-	margin-top: 5px;
-	margin-left: 5px;
-	margin-right: 5px;
-	display: flex;
-	align-items: center;
-}
-
-.action-text {
-	width: calc(100% - 80px);
-	padding-top: 15px;
-	padding-bottom: 15px;
+.time-switch-widget {
+	padding: 10px;
+	background-color: #424242;
+	color: white;
 }
