--- a/widgets/time-switch/css/style.css
+++ b/widgets/time-switch/css/style.css
@@ -7,4 +7,50 @@
 	padding: 10px;
 	background-color: #424242;
 	color: white;
+	display: flex;
+	flex-direction: column;
+	border-radius: 5px;;
+}
+
+.button.add {
+	filter: invert(1);
+	align-self: center;
+}
+
+.md-switch-container {
+	margin: 10px;
+}
+
+#switched-oid {
+	color: #a5a5a5;
+	margin-bottom: 10px;
+}
+
+h1 {
+	margin-bottom: 5px;
+}
+
+#add img {
+	float: right;
+}
+
+.actions {
+	overflow-y: scroll;
+	padding-right: 5px;
+}
+.actions::-webkit-scrollbar-track
+{
+	border-radius: 10px;
+}
+
+.actions::-webkit-scrollbar
+{
+	width: 4px;
+	background-color: #424242;
+}
+
+.actions::-webkit-scrollbar-thumb
+{
+	border-radius: 4px;
+	background-color: #fff;
 }
