--- a/widgets/time-switch/css/style.css
+++ b/widgets/time-switch/css/style.css
@@ -12,7 +12,8 @@
 	border-radius: 5px;;
 }
 
-.button.add {
+.button {
+	cursor: pointer;
 	filter: invert(1);
 	align-self: center;
 }
@@ -26,8 +27,21 @@
 	margin-bottom: 10px;
 }
 
-h1 {
+.heading div {
+	display: flex;
+}
+
+.heading .view h1 {
 	margin-bottom: 5px;
+	margin-top: 0px;
+	width: calc(100% - 30px);
+}
+
+.heading .edit input {
+	margin-bottom: 10px;
+	margin-top: 10px;
+	margin-right: 10px;
+	width: calc(100% - 30px);
 }
 
 #add img {
