Widget: Change TimeTrigger component to have attribute data which expects a serialized TimeTrigger

--- a/widgets/time-switch/css/TimeTrigger.css
+++ b/widgets/time-switch/css/TimeTrigger.css
@@ -1,9 +1,7 @@
 .time {
-	text-align: center;
-	margin-left: 40px;
+	text-align: left;
 	font-size: 2em;
 	font-weight: bold;
-	width: 85px;
 }
 
 input:invalid {
