--- a/widgets/time-switch/css/material-button.css
+++ b/widgets/time-switch/css/material-button.css
@@ -15,10 +15,10 @@
     text-align: center;
     text-overflow: ellipsis;
     text-transform: uppercase;
-    color: rgb(var(--pure-material-onprimary-rgb, 255, 255, 255));
-    background-color: #337ab7;
+    color: var(--ts-widget-btn-fg-color, #ffffff);
+    background-color: var(--ts-widget-primary-color, #337ab7);
     box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-    font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
+    font-family: var(--ts-widget-font-family);
     font-size: 14px;
     font-weight: 500;
     line-height: 36px;
