--- a/widgets/time-switch/css/style.css
+++ b/widgets/time-switch/css/style.css
@@ -1,11 +1,13 @@
 /* Style your widget here */
 .time-switch-widget {
-	padding: 10px;
-	background-color: #424242;
-	color: white;
-	border-radius: 5px;;
 }
 
 .time-switch-widget p {
 	color: red;
+	height: 100%;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	padding: 20px;
+	background-color: #403a3d;
+	border-radius: 5px;
 }
