Widget: Add additional custom css properties
Added properties for name font size and color as well as weekdays enabled font color.

--- a/widgets/time-switch/css/OnOffScheduleWidget.css
+++ b/widgets/time-switch/css/OnOffScheduleWidget.css
@@ -29,6 +29,8 @@
 }
 
 .heading .view h1 {
+    font-size: var(--ts-widget-name-font-size, 2em);
+    color: var(--ts-widget-name-fg-color, --ts-widget-oid-fg-color);
     margin-bottom: 5px;
     margin-top: 0px;
     width: calc(100% - 30px);
