Widget: Add additional custom css properties
Added font sizes and colors for switched value and switched time as well as font size for weekdays and oid.

--- a/widgets/time-switch/css/OnOffScheduleWidget.css
+++ b/widgets/time-switch/css/OnOffScheduleWidget.css
@@ -22,6 +22,7 @@
 #switched-oid {
     color: var(--ts-widget-oid-fg-color, #a5a5a5);
     margin-bottom: 10px;
+    font-size: var(--ts-widget-oid-font-size, --ts-widget-font-size);
 }
 
 .heading div {
