Widget: Add option to use astro icons instead of text

--- a/widgets/time-switch/css/AstroTrigger.css
+++ b/widgets/time-switch/css/AstroTrigger.css
@@ -1,8 +1,16 @@
-.view .time {
+.view .time.text {
     text-align: left;
     color: var(--ts-widget-astro-time-fg-color, --ts-widget-fg-color);
     font-size: var(--ts-widget-astro-time-font-size, 1.5em);
     font-weight: bold;
+    display: var(--ts-widget-astro-text-display, 'inline');
+}
+
+.view .time.icon {
+    display: var(--ts-widget-astro-icon-display, 'none');
+    filter:  var(--ts-widget-img-btn-filter, invert(1));
+    width: 42px;
+    height: 42px;
 }
 
 .view .shift {
