--- a/widgets/time-switch/css/ConditionAction.css
+++ b/widgets/time-switch/css/ConditionAction.css
@@ -13,6 +13,9 @@
     margin-left: 7px;
     width: 58px;
     white-space: nowrap;
+    color: var(--ts-widget-condition-fg-color, --ts-widget-fg-color);
+    font-size: var(--ts-widget-condition-font-size, 2em);
+    display: var(--ts-widget-condition-display, block);
 }
 
 .condition-header {
@@ -28,7 +31,7 @@
 .condition-body {
     display: flex;
     flex-direction: column;
-    margin: 20px;
+    margin: 20px 10px 20px 20px;
 }
 
 #selectConditionStateId1,#selectConditionStateId2,#selectSign {
